discussion/kv_engine/176364/176364_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Add BucketQuotaChangeTask to deal with quota changes

The task is created on Bucket creation and snoozed indefinitely.
When a quota change comes in via epctl flush param we wake the task
and have it change the Bucket quota. Currently this change in quota
sets the configuration parameter which updates watermarks and other
related quotas in a configuration listener. This code will be moved
into this task in a future change. In another change we will also
handle decreases in quota in a graceful manner with the goal of
preventing tmp fails as we reduce memory usage.

Change-Id: Ia43dda9fea8eab2547f9fafacf28d911b90c943c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-28 06:24:01.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-28 07:36:17.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47114/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes.....\kv_engine\engines\ep\tests\ep_testsuite_basic.cc:89 Test failed: `" (Expected `1000000", got `1000" - Incorrect new size.)
(40 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47114/ )

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonNo_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonNo_SnappyYes
unknown file: error: C++ exception with description "Failed to store TransportProtocols_XattrTest_mb25928_SystemCantExceedSystemLimit_Mcbp_XattrYes_JsonNo_SnappyYes: Temporary failure (134)" thrown in SetUp().
[  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonNo_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (3 ms)
TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonNo_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47114/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18359/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18359/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18359/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39577/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39577/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39577/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8030/ : FAILURE

Compile error at [2022-06-28T06:46:28.710Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8030/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20236/ : FAILURE

Compile error at [2022-06-28T06:46:06.032Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:17:10:
fatal error: libmagma/magma.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20236/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19450/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [4/93]: test dcp consumer flow control dynamic...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1540 Test failed: `" (Expected `7000000000", got `2000000000" - Incorrect new size.)
[2022-06-28T06:44:37.908Z] (677 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19450/ )

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/ephemeral_auto_delete":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/ephemeral_auto_delete
[2022-06-28T06:42:05.805Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:716: Failure
[2022-06-28T06:42:05.805Z] Expected equality of these values:
[2022-06-28T06:42:05.805Z]   initialNonIoTasks
[2022-06-28T06:42:05.805Z]     Which is: 2
[2022-06-28T06:42:05.805Z]   lpNonioQ.getFutureQueueSize()
[2022-06-28T06:42:05.805Z]     Which is: 3
[2022-06-28T06:42:05.805Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/ephemeral_auto_delete, where GetParam() = "bucket_type=ephemeral:ephemeral_full_policy=auto_delete" (75 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaItemsVisitedFirst/ephemeral_auto_delete
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19450/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20582/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonNo_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonNo_SnappyYes
[2022-06-28T07:03:14.557Z] unknown file: Failure
[2022-06-28T07:03:14.557Z] C++ exception with description "Failed to store TransportProtocols_XattrTest_mb25928_SystemCantExceedSystemLimit_Mcbp_XattrYes_JsonNo_SnappyYes: Temporary failure (134)" thrown in SetUp().
[2022-06-28T07:03:14.557Z] [  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonNo_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (2 ms)
TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonNo_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20582/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28617/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [4/93]: test dcp consumer flow control dynamic...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1467 Test failed: `" (Expected `500000000", got `104857600" - Incorrect new size.)
[2022-06-28T07:19:57.563Z] (133 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28617/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28617/ )

Test exceeded the timeout:
[2022-06-28T07:19:57.564Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28617/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17495/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8130/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21226/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
